fix invisible map field

--- a/css/rubedo.css
+++ b/css/rubedo.css
@@ -134,3 +134,6 @@
     min-height: 120px;
     min-width:300px;
 }
+.rubedo-map-field{
+    height:300px;
+}
